initial version with index.html template and secondaryTemplate.html

--- a/index.html
+++ b/index.html
@@ -22,27 +22,47 @@
     <section id="home">
     
     <div class="home-splash">
+        <div class="splash-graphic">
+            <img class="splash-img" src="./resources/cottage-160367.svg" alt="cottage">
+        </div>
+        <div class="splash-text"><h1>Stay Inside.</h1>
+        <h2> We're here to help fight boredom.</h2></div>
              
     </div>
     </section>  
 <section id="exercise">
     <div class="exercise-overview">
-        <div class="text-description"></div>
-        <div class="graphics"></div>
+        <div class="text-description">
+            <h2> EXERCISE </h2>
+            <h3>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eos quisquam inventore minus omnis ea pariatur, consequuntur sunt excepturi et! Enim vel fugit vitae explicabo ab officia dolor cum eveniet!
+            </h3>
+    </div>
+        <div class="graphics">
+            <img class="inside-img" src="./resources/undraw_pilates_gpdb.svg" alt="sss2" >
+        </div>
     </div>
 </section>
 
 <section id="entertainment">
     <div class="entertainment-overview">
-        <div class="text-description"></div>
-        <div class="graphics"></div>
+        <div class="text-description">
+            <h2>Learn</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quasi placeat, aspernatur id ea fugiat cupiditate rem odio esse quia, dolor praesentium magni consequatur ad saepe vitae neque autem fuga.</h3></div>
+            <div class="graphics">
+                <img class="inside-img" src="./resources/inspiration.svg" alt="sss3" >
+            </div>
     </div>
 </section>
 
 <section id="learn">
     <div class="learn-overview">
-        <div class="text-description"></div>
-        <div class="graphics"></div>
+        <div class="text-description">
+            <h2>Enjoy</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quasi placeat, aspernatur id ea fugiat cupiditate rem odio esse quia, dolor praesentium magni consequatur ad saepe vitae neque autem fuga.</h3></div>
+            <div class="graphics">
+                <img class="inside-img" src="./resources/relax.svg" alt="sss" >
+            </div>
+
     </div>
 </section>
 <section id="footer">
