mobile nav bar v2. x

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
          </nav>
          
          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <div class="mob-menu"></div>
-            <div class="mob-menu"></div>
-            <div class="mob-menu"></div>
+            <div class="mob-menu" id="my-mob-menu">
+                <div class="mob-menu1"></div>
+                <div class="mob-menu2"></div>
+                <div class="mob-menu3"></div>
+            </div>
         </a>
     </div>
     </section>  
