fixed horizontal scroll, added links in navigation, fixed window margin

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
          <nav>
             <ul> 
                 <!-- <li> <a class="nav-link" href="index.html"> Home </a> </li> -->
-                <li> <a class="nav-link" href="#"> Section 1 </a> </li>
-                <li> <a class="nav-link" href="#"> Section 2 </a> </li>
-                <li> <a class="nav-link" href="#"> Section 3 </a> </li>
+                <li> <a class="nav-link" href="Exercise.html"> Exercise </a> </li>
+                <li> <a class="nav-link" href="Learn.html"> Learn</a> </li>
+                <li> <a class="nav-link" href="Enjoy.html"> Enjoy</a> </li>
             </ul>
          </nav>
          
