replaced dummytext from homepage,added h4,  switched learn and entertainment classes in the index.html so they match the structure

--- a/Exercise.html
+++ b/Exercise.html
@@ -14,7 +14,7 @@
 <section id="navigation">
     <div class="main-header" id="my-main-header">
         <div class="logo-container">
-            <img class="logo" src="resources/logo.jpg" alt="house-logo">
+            <a href="index.html"> <img class="logo" src="resources/logo.jpg" alt="house-logo"></a>
         </div>
          <nav>
             <ul> 
