--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="main-header" id="my-main-header">
         <div class="logo-container">
-            <img class="logo" src="resources/logo.jpg" alt="house-logo">
+           <a href="index.html"> <img class="logo" src="resources/logo.jpg" alt="house-logo"></a>
         </div>
          <nav>
             <ul> 
@@ -55,8 +55,9 @@
     <div class="exercise-overview">
         <div class="text-description">
             <h2> EXERCISE </h2>
-            <h3>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eos quisquam inventore minus omnis ea pariatur, consequuntur sunt excepturi et! Enim vel fugit vitae explicabo ab officia dolor cum eveniet!
-            </h3>
+            <h3>Take care of your body, it's the only one you got ! 
+            </h3><h4> We know being inside the house doesn't necessarily motivate you into fitness activities,
+                but exercise is an important factor for you overall physical and mental health. A little goes a long way and being in good shape this summer will definetely feel good.</h4>
     </div>
         <div class="graphics">
             <img class="inside-img" src="./resources/undraw_pilates_gpdb.svg" alt="sss2" >
@@ -64,22 +65,24 @@
     </div>
 </section>
 
-<section id="entertainment">
-    <div class="entertainment-overview">
+<section id="learn">
+    <div class="learn-overview"> 
         <div class="text-description">
             <h2>Learn</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quasi placeat, aspernatur id ea fugiat cupiditate rem odio esse quia, dolor praesentium magni consequatur ad saepe vitae neque autem fuga.</h3></div>
+            <h3>Sure netflix is cool, but have you tried learning something ?</h3><h4> Let's face it, boredom comes to all of us while inside our comfy homes.
+                Might as well make the most of it and learn some new stuff. The human brain is always thirsty for new information. Give it what it wants !</h4></div>
             <div class="graphics">
                 <img class="inside-img" src="./resources/inspiration.svg" alt="sss3" >
             </div>
     </div>
 </section>
 
-<section id="learn">
-    <div class="learn-overview">
+<section id="entertainment">
+    <div class="entertainment-overview">
         <div class="text-description">
             <h2>Enjoy</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quasi placeat, aspernatur id ea fugiat cupiditate rem odio esse quia, dolor praesentium magni consequatur ad saepe vitae neque autem fuga.</h3></div>
+            <h3>Tired ? Worried ? Maybe just bored ?</h3>
+            <h4> Not an issue ! Browse this section and have your pick of stuff to kill time !</h4></div>
             <div class="graphics">
                 <img class="inside-img" src="./resources/relax.svg" alt="sss" >
             </div>
