switched middle section to alternate the others, added fonts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay inside</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 
 
@@ -54,7 +56,7 @@
 <section id="exercise">
     <div class="exercise-overview">
         <div class="text-description">
-            <h2> EXERCISE </h2>
+            <h2> Exercise </h2>
             <h3>Take care of your body, it's the only one you got ! 
             </h3><h4> We know being inside the house doesn't necessarily motivate you into fitness activities,
                 but exercise is an important factor for you overall physical and mental health. A little goes a long way and being in good shape this summer will definetely feel good.</h4>
@@ -67,11 +69,11 @@
 
 <section id="learn">
     <div class="learn-overview"> 
-        <div class="text-description">
+        <div class="text-description-learn">
             <h2>Learn</h2>
             <h3>Sure netflix is cool, but have you tried learning something ?</h3><h4> Let's face it, boredom comes to all of us while inside our comfy homes.
                 Might as well make the most of it and learn some new stuff. The human brain is always thirsty for new information. Give it what it wants !</h4></div>
-            <div class="graphics">
+            <div class="graphics learn-graphics">
                 <img class="inside-img" src="./resources/inspiration.svg" alt="sss3" >
             </div>
     </div>
