cards, pics, update all

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
     <div class="main-header" id="my-main-header">
         <div class="logo-container">
-            <img class="logo" src="resources/logo.jpg" alt="house-logo">
+            <a href="index.html"><img class="logo" src="resources/logo.jpg" alt="house-logo"></a>
         </div>
          <nav>
-            <ul> 
-                <!-- <li> <a class="nav-link" href="index.html"> Home </a> </li> -->
-                <li> <a class="nav-link" href="#"> Section 1 </a> </li>
-                <li> <a class="nav-link" href="#"> Section 2 </a> </li>
-                <li> <a class="nav-link" href="#"> Section 3 </a> </li>
+            <ul>
+                <li> <a class="nav-link" href="Exercise.html"> Exercise </a> </li>
+                <li> <a class="nav-link" href="Learn.html"> Learn </a> </li>
+                <li> <a class="nav-link" href="Enjoy.html"> Enjoy </a> </li>
             </ul>
          </nav>
          
@@ -86,6 +85,7 @@
 
     </div>
 </section>
+
 <section id="footer">
     <div class="footer-mobile footer-normal"></div>
 
