--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 but exercise is an important factor for you overall physical and mental health. A little goes a long way and being in good shape this summer will definetely feel good.</h4>
     </div>
         <div class="graphics">
-            <img class="inside-img" src="./resources/undraw_pilates_gpdb.svg" alt="sss2" >
+            <a href="Exercise.html"><img class="inside-img" src="./resources/undraw_pilates_gpdb.svg" alt="sss2" ></a>
         </div>
     </div>
 </section>
@@ -75,7 +75,7 @@
             <h3>Sure netflix is cool, but have you tried learning something ?</h3><h4> Let's face it, boredom comes to all of us while inside our comfy homes.
                 Might as well make the most of it and learn some new stuff. The human brain is always thirsty for new information. Give it what it wants !</h4></div>
             <div class="graphics learn-graphics">
-                <img class="inside-img" src="./resources/inspiration.svg" alt="sss3" >
+                <a href="Learn.html"><img class="inside-img" src="./resources/inspiration.svg" alt="sss3" ></a>
             </div>
     </div>
 </section>
@@ -86,7 +86,7 @@
             <h3>Tired ? Worried ? Maybe just bored ?</h3>
             <h4> Not an issue ! Browse this section and have your pick of stuff to kill time !</h4></div>
             <div class="graphics">
-                <img class="inside-img" src="./resources/relax.svg" alt="sss" >
+                <a href="Enjoy.html"><img class="inside-img" src="./resources/relax.svg" alt="man relaxing with tablet" ></a>
             </div>
     </div>
 </section>
